fix if location title is too long

--- a/www-develop/css/insertTrip.css
+++ b/www-develop/css/insertTrip.css
@@ -29,6 +29,9 @@
     padding-left: 5px;
     font-weight: bold;
     float: left;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 170px;
 }
 
 .insert-trip .description {
